@@ -1,4 +1,4 @@
-package java_web_server.src.com.example.virtualThreads;
+package java_web_server.src.com.example.threads;
 
 import java.io.IOException;
 import java.io.OutputStream;
@@ -10,27 +10,29 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 
-public class virtualThreadHttpServer {
+public class mulitiThreadsHttpServer {
     public static void main(String[] args) throws IOException {
         HttpServer server = HttpServer.create(new InetSocketAddress(3000), 0);
 
         server.createContext("/", new HelloHandler());
 
-        // Create an ExecutorService that uses virtual threads
-        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+        int poolSize = 2 * Runtime.getRuntime().availableProcessors();
+        ExecutorService executor = Executors.newFixedThreadPool(poolSize);
 
         server.setExecutor(executor);
+
         server.start();
     }
 
     static class HelloHandler implements HttpHandler {
         @Override
         public void handle(HttpExchange exchange) throws IOException {
+            // This is where you handle the incoming HTTP request
             String response = "Hello, World!";
             exchange.sendResponseHeaders(200, response.length());
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response.getBytes());
-            }
+            OutputStream os = exchange.getResponseBody();
+            os.write(response.getBytes());
+            os.close();
         }
     }
 }
